# bm_common_messages

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aanderaa_conductivity_msg.cpp  aanderaa_conductivity_msg.h  aanderaa_current_meter_msg.cpp  aanderaa_current_meter_msg.h  aanderaa_data_msg.cpp  aanderaa_data_msg.h  barometric_pressure_data_msg.cpp  barometric_pressure_data_msg.h  barometric_pressure_data_msp.cpp  bm_borealis.cpp  bm_borealis.h  bm_common_pub_sub.h  bm_common_structs.h  bm_messages_helper.c  bm_messages_helper.h  bm_rbr_data_msg.cpp  bm_rbr_data_msg.h  bm_rbr_pressure_difference_signal_msg.cpp  bm_rbr_pressure_difference_signal_msg.h  bm_seapoint_turbidity_data_msg.cpp  bm_seapoint_turbidity_data_msg.h  bm_soft_data_msg.cpp  bm_soft_data_msg.h  bm_turbidity_data_msg.cpp  bm_turbidity_data_msg.h  conductivity_msg.cpp  config_cbor_map_srv_reply_msg.c  config_cbor_map_srv_reply_msg.cpp  config_cbor_map_srv_reply_msg.h  config_cbor_map_srv_request_msg.c  config_cbor_map_srv_request_msg.cpp  config_cbor_map_srv_request_msg.h  device_test_svc_reply_msg.cpp  device_test_svc_reply_msg.h  device_test_svc_request_msg.cpp  device_test_svc_request_msg.h  (+26 more)
.github/workflows/: ci.yml
codegen/: CMakeLists.txt  GenerateMessages.cmake  README.md  build_and_test.py  c_generator.py  generate.py  generate_and_replace.py  msg_parser.py  run_comparison.py  sensor_header_generated.c  test_cbor_comparison.c  test_generated_messages.cpp
msg/: aanderaa_conductivity_data.msg  aanderaa_current_meter_data.msg  aanderaa_data.msg  barometric_pressure_data.msg  bm_rbr_data.msg  bm_soft_data.msg  bm_turbidity_data.msg  conductivity_data.msg  config_cbor_map_svc_reply.msg  config_cbor_map_svc_request.msg  pme_dissolved_oxygen.msg  pme_wipe.msg  power_battery.msg  power_battery_averages.msg  power_battery_reading.msg  power_reading.msg  power_reading_averages.msg  power_solar_averages.msg  power_solar_reading.msg  sensor_header.msg  sys_info_svc_reply.msg
test/: CMakeLists.txt  bm_borealis_ut.cpp  bm_common_messages_tests_ut.cpp  power_info_ut.cpp
